putting it back as previous fix did not work

--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -9,15 +9,26 @@ tagDocker.tag = sqlVersion
 
 tagDockerLocal.imageId = "innovateuk/ifs-mysql:" + sqlVersion
 tagDockerLocal.tag = sqlVersion
-tagDockerLocal.repository = "${-> getLocalOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"}"
+tagDockerLocal {
+    doFirst {
+        repository = getLocalOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"
+        tag = sqlVersion
+    }
+}
 
 osStageRemote.onlyIf { !isNamedEnv() }
 osStageRemote.imageName = getRemoteOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"
 osStageRemote.tag = sqlVersion
 
 osStageLocal.tag = sqlVersion
-osStageLocal.imageName = "${-> getLocalOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"}"
-osStageLocal.tag = sqlVersion
+osStageLocal {
+    doFirst {
+        imageName = getLocalOCCredentials().url + "/" + openshiftEnv + "/ifs-mysql"
+        tag = sqlVersion
+    }
+}
+
+
 
 
 
