--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -42,10 +42,10 @@ configurations {
 }
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile "mysql:mysql-connector-java"
-    compile "org.flywaydb:flyway-core:4.1.2"
-    compile "org.mapstruct:mapstruct:1.2.0.Final"
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'mysql:mysql-connector-java'
+    compile 'org.flywaydb:flyway-core:4.1.2'
+    compile 'org.mapstruct:mapstruct:1.2.0.Final'
     mapstruct 'org.mapstruct:mapstruct-processor:1.2.0.Final'
 
     compile project(':ifs-commons')
@@ -60,7 +60,6 @@ dependencies {
     testCompile project(':ifs-resources').sourceSets.test.output
     testCompile project(':ifs-commons').sourceSets.test.output
     testCompile project(':ifs-data-layer:data-service-commons').sourceSets.test.output
-
 }
 
 task initDB() {
