--- a/ifs-data-layer/ifs-finance-data-service/docker-build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/docker-build.gradle
@@ -5,12 +5,12 @@ ext.serverPort=8080
 ext.activeProfile="local"
 
 ext.ifsDatasourceHost = "ifs-database"
-ext.ifsDatasourceUrl="jdbc:mysql://ifs-database:3306/ifs_finance"
+ext.ifsDatasourceUrl="jdbc:mysql://ifs-finance-database:3306/ifs_finance"
 ext.ifsDatasourceUsername="root"
 ext.ifsDatasourcePassword="password"
 ext.ifsFlywayLocations="db/migration"
 
-project.ext['flyway.url']='jdbc:mysql://ifs-database:3306?characterEncoding=utf8'
+project.ext['flyway.url']='jdbc:mysql://ifs-finance-database:3306?characterEncoding=utf8'
 project.ext['flyway.schemas']='ifs_finance'
 project.ext['flyway.user']='root'
 project.ext['flyway.password']="password"
