--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -66,6 +66,7 @@ configurations {
 
 dependencies {
     compile project(":ifs-data-layer:data-service-commons")
+    compile project(":ifs-data-layer:data-service-file")
 
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "org.hibernate:hibernate-core:5.2.7.Final"
@@ -100,6 +101,7 @@ dependencies {
     testCompile project(':ifs-resources').sourceSets.test.output
     testCompile project(":ifs-commons").sourceSets.test.output
     testCompile project(":ifs-data-layer:data-service-commons").sourceSets.test.output
+    testCompile project(":ifs-data-layer:data-service-file").sourceSets.test.output
 
     testCompile "org.springframework.restdocs:spring-restdocs-mockmvc:1.1.2.RELEASE"
     testCompile "com.openpojo:openpojo:0.8.4"
