--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'ifs-data-layer:ifs-data-service'
 include 'ifs-data-layer:ifs-finance-data-service'
 include 'ifs-sil-stub'
 include 'ifs-data-layer:data-service-commons'
+include 'ifs-data-layer:data-service-file'
 include 'ifs-rest-api-service'
 include 'ifs-web-service'
 include 'ifs-web-service:ifs-web-core'
