--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     testCompile project(':ifs-resources').sourceSets.test.output
     testCompile project(":ifs-commons").sourceSets.test.output
     testCompile project(":ifs-data-layer:data-service-commons").sourceSets.test.output
+    testCompile 'org.assertj:assertj-core:3.9.0'
 
     testCompile "org.springframework.restdocs:spring-restdocs-mockmvc:1.1.2.RELEASE"
     testCompile "com.openpojo:openpojo:0.8.4"
