--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,7 +3,7 @@ services:
 
   ldap:
     links:
-      - mysql:ifs-databaseifs
+      - mysql:ifs-database
 
   registration-svc:
     hostname: registration-svc
