--- a/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
@@ -97,6 +97,8 @@ ifs.data.service.file.storage.virus.scanning.scanned.move.delay.millis=5000
 
 ifs.data.service.token.email.validity.mins=1440
 
+ifs.finance-totals.enabled=${project.ext['ifs.finance-totals.enabled']}
+
 ifs.system.name=Innovation Funding Service
 ifs.system.email.address=noreply-ifs@innovateuk.org
 ifs.system.internal.user.email.domain=${internalUserEmailDomain}
