IFS-2392 - Add finance-data-service to Openshift `processResources` task

--- a/openshift-support.gradle
+++ b/openshift-support.gradle
@@ -53,6 +53,10 @@ processResources {
     filesMatching("mysql-client/*.*") {
         expand project.properties
     }
+
+    filesMatching("finance-data-service/*.*") {
+        expand project.properties
+    }
 }
 
 task osDeployProduction(type: Exec) {
