--- a/ifs-data-layer/ifs-finance-data-service/automated-build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/automated-build.gradle
@@ -9,7 +9,11 @@ ext.ifsDatasourceUsername=""
 ext.ifsDatasourcePassword=""
 ext.ifsFlywayLocations=""
 
+ext.testIfsDatasourceUrl="jdbc:mysql://127.0.0.1:3306/ifs_finance_test"
+ext.testIfsDatasourceUsername="ifs"
+ext.testIfsDatasourcePassword="ifs"
+
 project.ext['flyway.url']='jdbc:mysql://127.0.0.1:3306?characterEncoding=utf8'
-project.ext['flyway.schemas']='ifs_finance'
+project.ext['flyway.schemas']='ifs_finance,ifs_finance_test'
 project.ext['flyway.user']="ifs"
 project.ext['flyway.password']="ifs"
