--- a/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-finance-data-service/src/main/resources/application.properties
@@ -25,6 +25,14 @@ spring.datasource.url=${ifsDatasourceUrl}
 spring.datasource.username=${ifsDatasourceUsername}
 spring.datasource.password=${ifsDatasourcePassword}
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddlauto=validate
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+
 spring.profiles.active=${activeProfile}
 
 ifs.data.service.rest.baseURL=http://data-service:8080
