--- a/ifs-rest-api-service/build.gradle
+++ b/ifs-rest-api-service/build.gradle
@@ -28,6 +28,7 @@ ext['spring-restdocs.version']='1.1.2.RELEASE'
 
 dependencies {
     compile project(':ifs-resources')
+    compile project(':ifs-commons')
     testCompile project(':ifs-resources').sourceSets.test.output
 }
 
