IFS-2602: Updated the Project size error message on Summary page

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -243,6 +243,7 @@ validation.publiccontent.searchinformationform.publishsetting.required=Please se
 validation.publiccontent.summaryform.description.required=Please enter a competition description.
 validation.publiccontent.summaryform.fundingType.required=Please enter a funding type.
 validation.publiccontent.summaryform.projectSize.required=Please enter a project size.
+validation.publiccontent.summaryform.projectSize.max=Project size has a maximum length of 255 characters.
 
 validation.publiccontent.contentgroup.notempty=Please include at least one content section.
 validation.publiccontent.contentgroup.heading.required=Please enter a heading.
