--- a/java-spring-boot.gradle
+++ b/java-spring-boot.gradle
@@ -43,6 +43,7 @@ dependencies {
     // Test Libraries
     testCompile group: 'org.hamcrest', name: 'hamcrest-core'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.assertj:assertj-core:3.9.0'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'org.mockito:mockito-core'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library'
