IFS-2381 Front door and competition management tests added.

--- a/jmeter/Representative/openshift-local.properties
+++ b/jmeter/Representative/openshift-local.properties
@@ -4,6 +4,7 @@ users_csv=user_data.csv
 competitions_csv=competition_data.csv
 invites_csv=invite_data.csv
 assessor_csv=assessor_data.csv
+front_door_competitions_csv=front-door-competitions.csv
 
 #----------------------------------------------------------
 # Summariser - Generate Summary Results - configuration (mainly applies to non-GUI mode)
