IFS-1875 - added ability to execute single-threaded for greater consistency

--- a/ifs-data-layer/ifs-data-service/src/test/resources/application-seeding-db.properties
+++ b/ifs-data-layer/ifs-data-service/src/test/resources/application-seeding-db.properties
@@ -13,3 +13,7 @@ spring.datasource.password=password
 flyway.enabled=false
 
 server.port=34567
+
+# possible values are SINGLE_THREADED (for executing web test generation in the main thread) or
+# MULTI_THREADED (for parallel execution)
+ifs.generate.test.data.execution=SINGLE_THREADED
