--- a/ifs-data-layer/ifs-finance-data-service/build.gradle
+++ b/ifs-data-layer/ifs-finance-data-service/build.gradle
@@ -3,8 +3,10 @@ apply from: targetBuild + "-build.gradle"
 apply from: rootProject.file("openshift-build.gradle")
 apply from: rootProject.file("prepare-docker.gradle")
 
+
 apply plugin: 'base'
 apply plugin: 'org.flywaydb.flyway'
+apply from: "../database-support.gradle"
 
 configurations {
     providedRuntime
@@ -17,6 +19,9 @@ tagDockerLocal.tag = financeDataServiceVersion
 osStageLocal.tag = financeDataServiceVersion
 
 ext.dockerDir = "$project.parent.projectDir/docker/"
+ext.sqlContainer = "mysql-finance-totals"
+ext.testSchema = "ifs_finance_test"
+ext.dockerComposeFile = "docker-compose-finance-totals.yml"
 
 buildDocker.dependsOn prepareDockerInput
 buildDocker.dependsOn ":docker:app-base-image:buildDocker"
@@ -70,13 +75,6 @@ dependencies {
     testCompile project(':ifs-resources').sourceSets.test.output
     testCompile project(':ifs-commons').sourceSets.test.output
     testCompile project(':ifs-data-layer:data-service-commons').sourceSets.test.output
-}
-
-task initDB() {
-    flywayMigrate.mustRunAfter flywayClean
-
-    dependsOn flywayClean
-    dependsOn flywayMigrate
 }
 
 task generateMainMapperClasses(type: JavaCompile) {
