--- a/ifs-data-layer/ifs-data-service/docker-build.gradle
+++ b/ifs-data-layer/ifs-data-service/docker-build.gradle
@@ -19,7 +19,7 @@ project.ext['flyway.locations']=flywayPatchesPath + "/migration," +
 
 project.ext['flyway.placeholders.ifs.system.user.uuid']='c0d02979-e66e-11e7-ac43-0242ac120002'
 
-project.ext['ifs.finance-totals.enabled']=true
+ext.ifsFinanceTotalsEnabled=true
 
 ext.ifsFlywayLocations="db/migration,db/setup,db/webtest"
 
