--- a/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
+++ b/ifs-data-layer/ifs-data-service/src/main/resources/application.properties
@@ -97,7 +97,7 @@ ifs.data.service.file.storage.virus.scanning.scanned.move.delay.millis=5000
 
 ifs.data.service.token.email.validity.mins=1440
 
-ifs.finance-totals.enabled=${project.ext['ifs.finance-totals.enabled']}
+ifs.finance-totals.enabled=${ext.ifsFinanceTotalsEnabled}
 
 ifs.system.name=Innovation Funding Service
 ifs.system.email.address=noreply-ifs@innovateuk.org
