Rationalised ifsFinanceTotalsEnabled property

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ allprojects {
 
 }
 
+ext.ifsFinanceTotalsEnabled = project.properties['ifs.finance-totals.enabled'] ?: true
 
 apply from: "openshift-support.gradle"
 apply from: "zipkin-support.gradle"
