--- a/openshift-support.gradle
+++ b/openshift-support.gradle
@@ -29,8 +29,15 @@ build.enabled = false
 //TODO need some logic to apply this for other environments
 // Currently these is the WRONG parameters for the named envs.
 
-//if (isNamedEnv) {}
-apply from: rootProject.file("shib-openshift-non-named-env-properties.gradle")
+if (!isNamedEnv()) {
+    println "AJB: ************ Non named env "
+    apply from: rootProject.file("shib-openshift-non-named-env-properties.gradle")
+} else {
+        println "AJB: ************  named env "
+}
+
+//TODO add functionality here to bring in specific named env properties files.
+
 
 
 processResources {
