--- a/os-files/31-data-service.yml
+++ b/os-files/31-data-service.yml
@@ -52,9 +52,9 @@ items:
           - name: JAVA_OPTS
             value: -Xms1500m -Xmx1500m -javaagent:/newrelic.jar
           - name: NEW_RELIC_APP_NAME
-            value: "ifs-data-service (<<NEWRELIC-ENVIRONMENT>>)"
+            value: "ifs-data-service (${openshiftEnv})"
           - name: NEW_RELIC_LICENSE_KEY
-            value: "<<NEWRELIC-LICENCE-KEY>>"
+            value: "${NEW_RELIC_LICENCE_KEY}"
           - name: NEW_RELIC_LOG
             value: "STDOUT"
           - name: SPRING_DATASOURCE_TOMCAT_MAX_ACTIVE
