--- a/os-files/45-registration-svc.yml
+++ b/os-files/45-registration-svc.yml
@@ -48,9 +48,9 @@ items:
           - name: JAVA_OPTS
             value: -Xms256m -Xmx650m -javaagent:/newrelic.jar
           - name: NEW_RELIC_APP_NAME
-            value: "ifs-registration-service (<<NEWRELIC-ENVIRONMENT>>)"
+            value: "ifs-registration-service (${openshiftEnv})"
           - name: NEW_RELIC_LICENSE_KEY
-            value: "<<NEWRELIC-LICENCE-KEY>>"
+            value: "${NEW_RELIC_LICENCE_KEY}"
           - name: NEW_RELIC_LOG
             value: "STDOUT"
           - name: LDAP_URL
