--- a/os-files/mail/21-mail.yml
+++ b/os-files/mail/21-mail.yml
@@ -24,7 +24,7 @@ items:
           imagePullPolicy: IfNotPresent
           env:
           - name: FQDN
-            value: <<MAIL-ADDRESS>>
+            value: ${MAIL_ADDRESS}
           ports:
           - containerPort: 8025
           - containerPort: 443
@@ -63,7 +63,7 @@ items:
   metadata:
     name: mail
   spec:
-    host: <<MAIL-ADDRESS>>
+    host: ${MAIL_ADDRESS}
     port:
       targetPort: 443-tcp
     tls:
