--- a/os-files/spring-admin/2-spring-boot-admin.yml
+++ b/os-files/spring-admin/2-spring-boot-admin.yml
@@ -64,7 +64,7 @@ items:
   metadata:
     name: admin
   spec:
-    host: <<ADMIN-ADDRESS>>
+    host: ${ADMIN_ADDRESS}
     port:
       targetPort: 8123-tcp
     to:
