--- a/non-named-env-properties.gradle
+++ b/non-named-env-properties.gradle
@@ -35,3 +35,14 @@ ext.SHIBBOLETH_LDAP_USER="cn=admin,dc=nodomain"
 
 ext.NEW_RELIC_LICENCE_KEY=""
 // we can use openshiftEnv in place of NEWRELIC_ENVIRONMENT
+
+
+ext.CLUSTER_ADDRESS="prod.ifs-test-clusters.com"
+//TODO Tidy this
+//TODO needs to be added to named env properties
+ext.SHIB_IDP_ADDRESS="auth."+project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
+ext.SHIB_ADDRESS=project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
+
+
+ext.MAIL_ADDRESS="mail-"+project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
+ext.ADMIN_ADDRESS="admin-"+project.properties['openshiftEnv']+".apps."+project.properties['CLUSTER_ADDRESS']
