--- a/os-files/5-front-door-service.yml
+++ b/os-files/5-front-door-service.yml
@@ -46,7 +46,7 @@ items:
           imagePullPolicy: Always
           env:
           - name: SPRING_APPLICATION_JSON
-            value: '{"logout":{"url": "https://<<SHIB-ADDRESS>>/Logout/"}}'
+            value: '{"logout":{"url": "https://${SHIB_ADDRESS}/Logout/"}}'
           - name: JAVA_OPTS
             value: -Xms1000m -Xmx1000m -javaagent:/newrelic.jar
           - name: NEW_RELIC_APP_NAME
