--- a/os-files/db-reset/66-dbreset.yml
+++ b/os-files/db-reset/66-dbreset.yml
@@ -42,12 +42,12 @@ items:
       args:
       - |
         cat > /flyway/flyway.conf <<EOF
-        flyway.url=jdbc:mysql://${DB_HOST}:${DB_PORT}
-        flyway.schemas=$DB_NAME
-        flyway.locations=$FLYWAY_LOCATIONS
-        flyway.placeholders.ifs.system.user.uuid=$SYSTEM_USER_UUID
-        flyway.user=$DB_USER
-        flyway.password=$DB_PASS
+        flyway.url=jdbc:mysql://\${DB_HOST}:\${DB_PORT}
+        flyway.schemas=\$DB_NAME
+        flyway.locations=\$FLYWAY_LOCATIONS
+        flyway.placeholders.ifs.system.user.uuid=\$SYSTEM_USER_UUID
+        flyway.user=\$DB_USER
+        flyway.password=\$DB_PASS
         EOF
         . /clean-migrate-db-sync-ldap.sh
       env:
